[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "googlemaps>=4.10.0",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
]
